@@ -8,6 +8,9 @@ TODO: anyevent strict checking for $_ changes?
 TODO: break the API and put the rr ttl where it belongs.
 TODO: Kevin Ryde         (3.8K)   1 inbox       Glib child processes
 	- add support for (currently third-party) AnyEvent::Impl::FLTK.
+        - many read types in AnyEvent::Handle would malfunction during
+          transitions to TLS because of a "delete $self->{rbuf}".
+          (reported by Gerald Galster).
 
 5.34  Thu May 12 09:59:41 CEST 2011
 	- AE::TLS didn't support both cert_file and key at the same time,
